site-src/guides/quickstart/policy/e2e.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentic-net-gateway
  namespace: quickstart-ns
spec:
  gatewayClassName: kube-agentic-networking
  listeners:
    - protocol: HTTPS
      port: 10001
      name: agentic-net-gateway-listener2
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-remote-mcp
  namespace: quickstart-ns
spec:
  parentRefs:
    - name: agentic-net-gateway
      namespace: quickstart-ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /remote/mcp
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: remote-mcp-svc # remote mcp server
          port: 443
          group: ""
          kind: Service
          namespace: quickstart-ns
---
apiVersion: v1
kind: Service
metadata:
  name: remote-mcp-svc
  namespace: quickstart-ns
spec:
  type: ExternalName
  externalName: mcp.deepwiki.com
