site-src/guides/quickstart/policy/new.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentic-net-gateway
  namespace: quickstart-ns
spec:
  gatewayClassName: kube-agentic-networking
  listeners:
    - protocol: HTTPS
      port: 10001
      name: agentic-net-gateway-listener2
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-local-mcp
  namespace: quickstart-ns
spec:
  parentRefs:
    - name: agentic-net-gateway
      namespace: quickstart-ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /local/mcp
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: mcp-everything-svc # local mcp backend running in the Kubernetes cluster
          kind: Service
          port: 3001
          namespace: quickstart-ns
